# KIVY_CHAT_APP

./: .gitignore  .pre-commit-config.yaml  ANDROID_DEPLOYMENT.md  PROJECT_PLAN.md  README.md  main.py  pyproject.toml
.cursor/rules/: android-quick-ref.md  kivy.mdc  mobile-kivy-development.md
chat_ui/: app.py  theme.py
chat_ui/core/: __init__.py  config.py  mobile_config.py  websocket_client.py
chat_ui/screens/: __init__.py  chat_screen.py
chat_ui/ui/: __init__.py
chat_ui/ui/widgets/: __init__.py
