[project]
name = "kivymd-chat-ui"
version = "0.1.0"
description = "Modern KivyMD Chat UI Frontend"
authors = [
    {name = "Chat UI Team", email = "team@chatui.com"}
]
dependencies = [
    "kivymd~=1.2.0",
    "kivy~=2.3.1",
    "websockets~=13.1",
]
requires-python = ">=3.13.0a"
readme = "README.md"
license = "MIT"

[project.optional-dependencies]
dev = [
    "black~=25.1.0",
    "pytest~=8.3.4",
    "pytest-asyncio~=0.25.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["chat_ui*"]
exclude = ["assets*"]

[tool.uv]
dev-dependencies = [
    "black~=25.1.0",
    "pytest~=8.3.4",
    "pytest-asyncio~=0.25.0",
] 

[tool.uv.sources]
kivymd = { git = "https://github.com/kivymd/KivyMD.git" }
